--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,4 +1,17 @@
-.container-main-home-page{
- width: 100%;
- min-height: 100vh;   
+.container-main-home-page {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-main-home {
+    width: calc(100% - 100px);
+    height: 90vh;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
