--- a/src/components/statistcs/style.css
+++ b/src/components/statistcs/style.css
@@ -1,6 +1,6 @@
 .container-statistcs {
     width: calc(100% - 100px);
-    margin: 40px 0 40px 100px;
+    margin: 40px 0 80px 100px;
     display: flex;
     justify-content: center;
     gap: 100px;
@@ -26,7 +26,6 @@
 .after:nth-child(1) {
     position: absolute;
     left: 20rem;
-    animation: showRight 2s ease;
 }
 
 @keyframes showRight {
@@ -47,7 +46,6 @@
 
 .after:nth-child(2) {
     position: absolute;
-    animation: showTop 2s ease;
 }
 
 @keyframes showTop {
@@ -68,7 +66,6 @@
 
 .after:nth-child(3) {
     position: absolute;
-    animation: showLeft 2s ease;
     right: 20rem;
 }
 
@@ -86,4 +83,16 @@
         opacity: 1;
         margin-right: 0;
     }
+}
+
+.after.activeAnimation:nth-child(1) {
+    animation: showRight 2s ease ;
+}
+
+.after.activeAnimation:nth-child(2) {
+    animation: showTop 2s ease ;
+}
+
+.after.activeAnimation:nth-child(3) {
+    animation: showLeft 2s ease ;
 }
