--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -15,3 +15,10 @@
     height: 100%;
     object-fit: cover;
 }
+
+.section-squad-sm {
+    width: 100%;
+    height: auto;
+    background-color: #FAF9FA;
+    padding: 50px 0 50px 0;
+}
